# transformer-from-scratch

./: .gitignore  README.md  demo.ipynb  pyproject.toml  self-attention.py  test.py  vocab.txt
models/layers/: decoder_block.py  self_attention.py  transformer_block.py
models/model/: decoder.py  encoder.py  transformer.py
